--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,39 @@
+awscli==1.18.157
 boto3==1.15.16
 botocore==1.18.16
+certifi==2020.6.20
 click==7.1.2
+colorama==0.4.3
+cycler==0.10.0
+docutils==0.15.2
+extras==1.0.0
+fixtures==3.0.0
 Flask==1.1.2
+fuzzywuzzy==0.18.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jmespath==0.10.0
+kiwisolver==1.2.0
+lettuce==0.2.23
+linecache2==1.0.0
 MarkupSafe==1.1.1
+matplotlib==3.3.2
+mock==4.0.2
+numpy==1.19.2
+pbr==5.5.0
+Pillow==7.2.0
+pyasn1==0.4.8
+pyparsing==2.4.7
 python-dateutil==2.8.1
+python-mimeparse==1.6.0
+python-subunit==1.4.0
+PyYAML==5.3.1
+rsa==4.5
 s3transfer==0.3.3
 six==1.15.0
+sure==1.4.11
+testtools==2.4.0
+traceback2==1.4.0
+unittest2==1.1.0
 urllib3==1.25.10
 Werkzeug==1.0.1
