--- a/cohack/flask_analysis/requirements.txt
+++ b/cohack/flask_analysis/requirements.txt
@@ -4,7 +4,7 @@ botocore==1.19.8
 certifi==2020.6.20
 click==7.1.2
 cycler==0.10.0
-Django==3.1.2
+decouple==0.0.7
 django-scheduler==0.9.3
 Faker==4.14.0
 Flask==1.1.2
