--- a/cohack/.gitignore
+++ b/cohack/.gitignore
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+!.env
 
 npm-debug.log*
 yarn-debug.log*
@@ -37,3 +38,4 @@ amplifyconfiguration.json
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
+
