--- a/cohack/package.json
+++ b/cohack/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "amplify": "^0.0.11",
     "atomize": "^1.0.26",
     "aws-amplify": "^3.3.13",
     "bootstrap": "^4.5.3",
