[feature] Working autocomplete

--- a/cohack/package.json
+++ b/cohack/package.json
@@ -12,8 +12,10 @@
     "aws-amplify": "^3.3.13",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-scripts": "3.4.4",
     "react-transition-group": "^4.4.1",
     "react-welcome-page": "^0.2.1",
