--- a/cohack/.env
+++ b/cohack/.env
@@ -1,3 +1,3 @@
 REACT_APP_FLASK="http://localhost:5000"
 REACT_APP_ABOUT="https://devpost.com/software/covidb"
-REACT_APP_PLACES_AUTOCOMPLETE="https://maps.googleapis.com/maps/api/place/autocomplete/json?"
+REACT_APP_PLACES_AUTOCOMPLETE="https://maps.googleapis.com/maps/api/json?"
