--- a/cohack/amplify/backend/backend-config.json
+++ b/cohack/amplify/backend/backend-config.json
@@ -6,5 +6,12 @@
       "dependsOn": [],
       "customAuth": false
     }
+  },
+  "function": {
+    "S3Trigger24b97786": {
+      "service": "Lambda",
+      "providerPlugin": "awscloudformation",
+      "build": true
+    }
   }
 }
