--- a/cohack/package.json
+++ b/cohack/package.json
@@ -18,6 +18,7 @@
     "react-places-autocomplete": "^7.3.0",
     "react-scripts": "3.4.4",
     "react-transition-group": "^4.4.1",
+    "react-webcam": "^5.2.2",
     "react-welcome-page": "^0.2.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7"
