--- a/cohack/amplify/.config/project-config.json
+++ b/cohack/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-  "projectName": "covidbv3",
+  "projectName": "covidbscanReact",
   "version": "3.0",
   "frontend": "javascript",
   "javascript": {
