Auth fixed but not rooted

--- a/cohack/amplify/backend/backend-config.json
+++ b/cohack/amplify/backend/backend-config.json
@@ -1,1 +1,34 @@
-{}
+{
+  "auth": {
+    "covidbscanreact6a5d9cf8": {
+      "service": "Cognito",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "customAuth": false
+    }
+  },
+  "function": {
+    "S3Trigger3b80f279": {
+      "service": "Lambda",
+      "providerPlugin": "awscloudformation",
+      "build": true
+    }
+  },
+  "storage": {
+    "checkupUserVids": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "S3Trigger3b80f279",
+          "attributes": [
+            "Name",
+            "Arn",
+            "LambdaExecutionRole"
+          ]
+        }
+      ]
+    }
+  }
+}
